fix(react): add alignment to sidebar children links and fix active link

--- a/react/src/Components/Page/Sidebar/PageSidebarItem.module.css
+++ b/react/src/Components/Page/Sidebar/PageSidebarItem.module.css
@@ -42,6 +42,10 @@
     text-align: center;
 }
 
+.noIcon {
+    margin-left: 14px;
+}
+
 .status {
     float: right;
 }
